--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,10 @@
         android:roundIcon="@mipmap/icon2"
         android:supportsRtl="true"
         android:theme="@style/Theme.PokeShop"
-        tools:targetApi="31">
+        tools:targetApi="35">
+        <activity
+            android:name=".SettingsActivity"
+            android:exported="true" />
         <activity
             android:name=".ComandaRealitzadaActivity"
             android:exported="true" />
