--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.PokeShop"
         tools:targetApi="35">
         <activity
+            android:name=".filters"
+            android:exported="false" />
+        <activity
             android:name=".SettingsActivity"
             android:exported="true" />
         <activity
